# iris/misc/swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "InterSystems IRIS REST API for Integrated ML Demo",
     "description": "Rest API for the Integrated ML Demo",
-    "version": "0.2",
+    "version": "0.3",
     "contact": {
       "email": "theophile.thierry@intersystems.com"
     },
@@ -12,26 +12,22 @@
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
-  "host": "localhost:52775",
+  "host": "localhost:4041",
   "basePath": "/api/integratedML",
   "schemes": [
     "http",
     "https"
   ],
-  "securityDefinitions": {
-    "basicAuth": {
-      "type": "basic"
-    }
-  },
-  "security": [
-    {
-      "basicAuth": []
-    }
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
   ],
   "paths": {
     "/passengers": {
       "get": {
-        "description": "Retreive the total number of Passengers THEN the Passengers from currPage\\*(pageSize-1) to currPage\\*pageSize. Search by name possible too.",
+        "description": "Retreive the Passengers from the current page with specific page length. Search by name possible too.",
         "summary": "Get passengers with pagination and search by name possible",
         "parameters": [
           {
@@ -61,14 +57,17 @@
             "schema": {
               "type": "object",
               "properties": {
-                "total": {
-                  "type": "number"
-                },
                 "passengers": {
                   "type": "array",
                   "items": {
                     "$ref": "#/definitions/passenger"
                   }
+                },
+                "total": {
+                  "type": "number"
+                },
+                "query": {
+                  "type": "string"
                 }
               }
             }
@@ -102,6 +101,9 @@
               "properties": {
                 "passengerId": {
                   "type": "integer"
+                },
+                "query": {
+                  "type": "string"
                 }
               }
             }
@@ -133,7 +135,15 @@
           "200": {
             "description": "(Expected Result)",
             "schema": {
-              "$ref": "#/definitions/passenger"
+              "type": "object",
+              "properties": {
+                "query": {
+                  "type": "string"
+                },
+                "passenger": {
+                  "$ref": "#/definitions/passenger"
+                }
+              }
             }
           },
           "204": {
@@ -168,7 +178,15 @@
         ],
         "responses": {
           "200": {
-            "description": "(Expected Result)"
+            "description": "(Expected Result)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "query": {
+                  "type": "string"
+                }
+              }
+            }
           },
           "204": {
             "description": "(Not Found)"
@@ -196,7 +214,15 @@
         ],
         "responses": {
           "200": {
-            "description": "(Expected Result)"
+            "description": "(Expected Result)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "query": {
+                  "type": "string"
+                }
+              }
+            }
           },
           "204": {
             "description": "(Not Found)"
@@ -247,6 +273,9 @@
                   "items": {
                     "$ref": "#/definitions/patient"
                   }
+                },
+                "query": {
+                  "type": "string"
                 }
               }
             }
@@ -280,6 +309,9 @@
               "properties": {
                 "patientId": {
                   "type": "integer"
+                },
+                "query": {
+                  "type": "string"
                 }
               }
             }
@@ -311,7 +343,15 @@
           "200": {
             "description": "(Expected Result)",
             "schema": {
-              "$ref": "#/definitions/patient"
+              "type": "object",
+              "properties": {
+                "query": {
+                  "type": "string"
+                },
+                "patient": {
+                  "$ref": "#/definitions/patient"
+                }
+              }
             }
           },
           "204": {
@@ -346,7 +386,15 @@
         ],
         "responses": {
           "200": {
-            "description": "(Expected Result)"
+            "description": "(Expected Result)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "query": {
+                  "type": "string"
+                }
+              }
+            }
           },
           "204": {
             "description": "(Not Found)"
@@ -374,7 +422,15 @@
         ],
         "responses": {
           "200": {
-            "description": "(Expected Result)"
+            "description": "(Expected Result)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "query": {
+                  "type": "string"
+                }
+              }
+            }
           },
           "204": {
             "description": "(Not Found)"
@@ -665,7 +721,7 @@
             "description": "Name of the training run"
           }
         ],
-        "description": "Get the state of a speecific training run",
+        "description": "Get the state of a specific training run",
         "summary": "Get state of training run",
         "operationId": "getStateTrainingRun",
         "x-ISC_ServiceMethod": "getStateTrainingRun",
@@ -676,6 +732,41 @@
               "type": "object",
               "properties": {
                 "state": {
+                  "type": "string"
+                },
+                "query": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "(Unexpected Error)"
+          }
+        }
+      }
+    },
+    "/ml/trainings/logs": {
+      "get": {
+        "parameters": [
+          {
+            "in": "query",
+            "name": "trainingName",
+            "type": "string",
+            "description": "Name of the training run"
+          }
+        ],
+        "description": "Get the log of a speecific training run",
+        "summary": "Get log of training run",
+        "operationId": "getLogTrainingRun",
+        "x-ISC_ServiceMethod": "getLogTrainingRun",
+        "responses": {
+          "200": {
+            "description": "(Expected Result)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "log": {
                   "type": "string"
                 },
                 "query": {
@@ -750,9 +841,6 @@
           "204": {
             "description": "(Not Found)"
           },
-          "400": {
-            "description": "(Bad Request)"
-          },
           "default": {
             "description": "(Unexpected Error)"
           }
@@ -761,7 +849,7 @@
     },
     "/ml/trainings/configurations/datarobot": {
       "post": {
-        "description": "Create a DataRobot configuration",
+        "description": "Create a DataRobot configuration named DataRobotConfig",
         "summary": "Create DataRobot configuration",
         "operationId": "createDRConfiguration",
         "x-ISC_ServiceMethod": "createDRConfiguration",
@@ -795,9 +883,6 @@
                 }
               }
             }
-          },
-          "400": {
-            "description": "(Bad Request)"
           },
           "default": {
             "description": "(Unexpected Error)"
@@ -840,47 +925,6 @@
               }
             }
           },
-          "400": {
-            "description": "(Bad Request)"
-          },
-          "default": {
-            "description": "(Unexpected Error)"
-          }
-        }
-      }
-    },
-    "/ml/trainings/logs": {
-      "get": {
-        "parameters": [
-          {
-            "in": "query",
-            "name": "trainingName",
-            "type": "string",
-            "description": "Name of the training run"
-          }
-        ],
-        "description": "Get the log of a speecific training run",
-        "summary": "Get log of training run",
-        "operationId": "getLogTrainingRun",
-        "x-ISC_ServiceMethod": "getLogTrainingRun",
-        "responses": {
-          "200": {
-            "description": "(Expected Result)",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "log": {
-                  "type": "string"
-                },
-                "query": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "204": {
-            "description": "(Not Found)"
-          },
           "default": {
             "description": "(Unexpected Error)"
           }
@@ -899,7 +943,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "trainingRuns": {
+                "validationRuns": {
                   "type": "array",
                   "items": {
                     "$ref": "#/definitions/mlValidationRun"
@@ -1177,7 +1221,7 @@
           "type": "integer"
         },
         "survived": {
-          "type": "boolean"
+          "type": "integer"
         },
         "class": {
           "type": "integer"
@@ -1254,7 +1298,7 @@
           "type": "number"
         },
         "noShow": {
-          "type": "string"
+          "type": "number"
         }
       }
     },
